@@ -49,6 +49,9 @@ bug report - outstanding bugs are listed here:
 0.76: please submit patches for this section with actual code/doc
       patches!
 
+* pam_unix: restore handling of 'likeauth' argument to a known working
+  state; prettify AUTH_RETURN macro; remove redundant argv checks in
+  pam_sm_setcred() (Bugs 483959, 113596 - vorlon)
 * pam_cracklib: another try at implementing similar() from Harald
   Welte and Nalin (Bugs 436053, 476957 - agmorgan)
 * documentation: random typo fixes from Nalin (Bug 476949 - agmorgan)
